fix nyt logo on mobile

--- a/frontend/src/app/filter/filter.component.css
+++ b/frontend/src/app/filter/filter.component.css
@@ -27,7 +27,6 @@
 .header-logo {
     display: flex;
     justify-content: center;
-    width: 100%;
     /* border: 2px solid #424242; */
 }
 
